优化了结构，增加了邮件提醒

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ build/
 src/main/resources/cookie.properties
 src/main/resources/wxpusher.properties
 dependency-reduced-pom.xml
+src/main/resources/mail.properties
